small layout fixes, add fonts

--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
   </svg>
 </div>
 <h2 class="connect-ledger__title">Connect Ledger</h2>
-<span class="connect-ledger__comment">
+<div class="connect-ledger__comment">
       Be sure that your Ledger is connected to computer and unlocked.
-    </span>
+    </div>
 <div class="connect-ledger__buttons">
   <button class="connect-ledger__buttons-back button white">Back</button>
 
