--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
 </div>
 
 <!--    <button id="ledger-pairing-btn">Set pairing</button>-->
-<script src="./bundle.js" type="text/javascript"></script>
+<script src="./build/main.js" type="text/javascript"></script>
 </body>
 </html>
