feat: update sparx theme

--- a/src/index.html
+++ b/src/index.html
@@ -216,13 +216,18 @@
 
 <div class="sparx" data-theme="sparx" style="display: none;">
     <div>
-        <h1 class="sparx__title">Connect Ledger</h1>
+        <h1 class="sparx__title">Connect Ledger Hardware</h1>
         <p class="sparx__comment">
             Be sure that your Ledger is connected and Everscale app is open.
         </p>
     </div>
     <div class="sparx__pane">
-        <img class="sparx__pane-img" src="/img/usb-1-min.png" alt="">
+        <img
+            class="sparx__pane-img"
+            srcset="/img/sparx-usb-1@2x.png 2x"
+            src="/img/sparx-usb-1.png"
+            alt=""
+        />
     </div>
     <div class="sparx__buttons">
         <button
@@ -250,31 +255,46 @@
     <h1 class="onboarding-sparx__title">Connect Ledger Hardware</h1>
     <div class="onboarding-sparx__steps">
         <div class="onboarding-sparx__step">
-            <img class="onboarding-sparx__step-img" src="/img/usb-1-min.png" alt="">
+            <img
+                class="onboarding-sparx__step-img"
+                srcset="/img/sparx-usb-1@2x.png 2x"
+                src="/img/sparx-usb-1.png"
+                alt=""
+            />
             <h2 class="onboarding-sparx__step-title">
                 First step
             </h2>
-            <div class="onboarding-sparx__step-text">
+            <p class="onboarding-sparx__step-text">
                 Connect your Ledger to computer
-            </div>
+            </p>
         </div>
         <div class="onboarding-sparx__step">
-            <img class="onboarding-sparx__step-img" src="/img/usb-2-min.png" alt="">
+            <img
+                class="onboarding-sparx__step-img"
+                srcset="/img/sparx-usb-2@2x.png 2x"
+                src="/img/sparx-usb-2.png"
+                alt=""
+            />
             <h2 class="onboarding-sparx__step-title">
                 Second step
             </h2>
-            <div class="onboarding-sparx__step-text">
+            <p class="onboarding-sparx__step-text">
                 Enter the pin to unlock
-            </div>
+            </p>
         </div>
         <div class="onboarding-sparx__step">
-            <img class="onboarding-sparx__step-img" src="/img/usb-3-min.png" alt="">
+            <img
+                class="onboarding-sparx__step-img"
+                srcset="/img/sparx-usb-3@2x.png 2x"
+                src="/img/sparx-usb-3.png"
+                alt=""
+            />
             <h2 class="onboarding-sparx__step-title">
                 Third step
             </h2>
-            <div class="onboarding-sparx__step-text">
+            <p class="onboarding-sparx__step-text">
                 Navigate to the Everscale section on your Ledger dashboard to access the wallet
-            </div>
+            </p>
         </div>
     </div>
     <div class="onboarding-sparx__buttons">
@@ -291,7 +311,7 @@
             data-action="pairing"
             class="sparx__btn sparx__btn--primary"
         >
-            Next
+            Connect
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
                 <path d="M3.375 10L17.375 10M17.375 10L12.125 4.5M17.375 10L12.125 15.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
