--- a/src/index.html
+++ b/src/index.html
@@ -302,8 +302,8 @@
             data-action="back"
             class="sparx__btn sparx__btn--secondary"
         >
-            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
-                <path d="M17.375 10L3.375 10M3.375 10L8.625 4.5M3.375 10L8.625 15.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10 15.8334L4.16667 10M4.16667 10L10 4.16669M4.16667 10H15.8333" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
             Back
         </button>
@@ -312,8 +312,8 @@
             class="sparx__btn sparx__btn--primary"
         >
             Connect
-            <svg xmlns="http://www.w3.org/2000/svg" width="21" height="20" viewBox="0 0 21 20" fill="none">
-                <path d="M3.375 10L17.375 10M17.375 10L12.125 4.5M17.375 10L12.125 15.5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4.16667 10H15.8333M15.8333 10L10 4.16669M15.8333 10L10 15.8334" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             </svg>
         </button>
     </div>
